fix scroll jump

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -23,17 +23,21 @@
 @tailwind utilities;
 
 .gradient {
-    background: #ff5f6d; /* fallback for old browsers */
+    background: theme('colors.gradient.start'); /* fallback for old browsers */
     background: linear-gradient(
-        to left,
+        to right,
         theme('colors.gradient.start'),
         theme('colors.gradient.middle'),
         theme('colors.gradient.end')
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+html {
+    overflow-y: scroll;
+    @apply gradient scrolling-touch;
+}
 .nav-bar {
-    @apply fixed w-full z-30 top-0 overflow-hidden text-white;
-
+    @apply fixed w-full z-30 overflow-hidden text-white;
+    margin-right: calc(100vw - 100%);
     .nav-inner {
         @apply w-full mx-auto flex flex-wrap items-center justify-between mt-0 py-2;
         .nav-brand {
@@ -114,12 +118,12 @@
             }
 
             > button {
-                @apply mx-auto font-bold rounded-full mt-4 py-4 px-8  shadow opacity-75 bg-white text-gray-800;
+                @apply mx-auto font-bold rounded-full mt-4 py-4 px-8  shadow bg-alpha-80 text-gradient-start;
                 @screen lg {
                     @apply mt-0 mr-4;
                 }
                 &:hover {
-                    @apply underline opacity-100;
+                    @apply underline bg-white;
                 }
             }
         }
